--- a/style.css
+++ b/style.css
@@ -21,17 +21,15 @@ body {
 }
 
 .white {
-  width: 100px;
-  height: 400px;
+  --width: 100px;
   background-color: white;
   border: 1px solid #333;
 }
 
 .black {
-  width: 60px;
-  height: 240px;
+  --width: 60px;
   background-color: black;
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: calc(var(--width) / -2);
+  margin-right: calc(var(--width) / -2);
   z-index:2;
 }
